[tool.poetry]
name = "youht-app1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.14"
langchain-openai = "^0.1.21"
langchain-community = "^0.2.12"
langgraph = "^0.2.3"
langchain-experimental = "^0.0.64"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"